--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@babel/preset-env": "^7.26.7",
     "@babel/preset-react": "^7.26.3",
     "@testing-library/jest-dom": "5.17.0",
-    "@testing-library/react": "14.3.1",
+    "@testing-library/react": "^13.4.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
@@ -43,6 +43,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-websocket-mock": "^1.5.0",
     "mock-socket": "^8.0.5",
+    "react-test-renderer": "^18.3.1",
     "sass": "1.59.2",
     "vite": "4.4.2"
   }
